# reachy-presenter

./: .env.example  .gitignore  CLAUDE.md  README.md  ReachyMini2.pptx  pyproject.toml  requirements.txt  test_audience.py
app/: agent.py  main.py  main_audience.py  system_prompt.md
app/audience/: agent.py  bidi_conversation.py  initiator.py  main_audience.py  notifier.py  presence_detector.py  server.py
app/audio_helpers/: __init__.py
app/llm/: gemini_client.py  openai_client.py
app/parsers/: parsers.py  pdf_parser.py  pptx_parser.py
app/rag/: EVALS_GEN_README.md  EVALS_README.md  README.md  eval.py  eval_generation.py  eval_retrieval.py  explore_dataset.ipynb  generate.py  ingest.py  retrieve.py
app/rag/eval_logs/: eval_20260318_000000.json  eval_20260319_220655.json  eval_20260322_173340.json  eval_gen_20260323_201619.json  eval_gen_20260406_004011.json  eval_gen_20260406_023720.json
app/rag/offline_eval_logs/: eval_gen_20260323_201619.json
app/robot/: attention_classifier.py  attention_gate.py  attentive_listener.py  doa.py  gaze.py  gestures.py  greetings_integration.py  head_tracker.py  head_wobbler.py  idle_behavior.py  live_presenter.py  main_audience.py  peer_server.py  qa_handler.py  scan_behavior.py  tts.py  vision.py
app/tools/: dance.py  generate_script.py  load_presentation.py  move_head.py  play_emotion.py  present_slide.py  rag_query.py
tests/: FAUSampleQuery (1).ipynb  test_keys.py  test_live.py
