[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reachy-audience"
version = "0.1.0"
description = "AI-powered audience robot for Reachy Mini using Gemini Bidi streaming"
requires-python = ">=3.10"
dependencies = [
    "google-adk==1.19.0",
    "google-genai==1.68.0",
    "python-dotenv",
    "numpy",
    "scipy",
]

[project.scripts]
reachy-audience = "app.main_audience:main"

[project.entry-points."reachy_mini_apps"]
reachy_audience = "app.main_audience:ReachyAudienceApp"

[tool.hatch.build.targets.wheel]
packages = ["app"]
